roles/kubernetes/files/argocd/awx/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: awx-service-proxy
spec:
  type: ExternalName
  externalName: awx-service.awx.svc.cluster.local
  ports:
  - port: 80
