roles/kubernetes/files/argocd/awx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
spec:
  tls:
    - hosts:
      - awx-k8s.bachstraat20.duckdns.org
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: ingress-tls
  rules:
    - host: awx-k8s.bachstraat20.duckdns.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            service:
              name: awx-service
              port: 
                number: 80
